Schedule html and css update 1.2

--- a/static/health_fitness_plan.css
+++ b/static/health_fitness_plan.css
@@ -34,17 +34,9 @@ table{
     background-color: white;
 }
 
-td > a:hover{
-    text-decoration: none;
-}
-
-td > a{
+td > span{
     color: black;
     font-weight: bold;
-}
-
-form{
-    border: 2px solid lightskyblue;
 }
 
 #poly{
