--- a/templates/home.html
+++ b/templates/home.html
@@ -20,57 +20,12 @@
             -o-background-size: cover;
             background-size: cover;
         }
-        .profile-pic
-        {
-            right:0;
-            width: 50px;
-            height: 50px;
-            overflow:hidden;
-        }
-        .img-thumbnail
-        {
-            height:50px!important;
-        }
-        .highlight-pic:hover
-        {
-        }
     </style>
+
   </head>
   <body>
-  <nav class="navbar navbar-expand-sm bg-light justify-content-center">
-    <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/home">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Schedule</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Exercise Guide</a>
-    </li>
-      <li class="nav-item">
-      <a class="nav-link" href="#">Fitness Tracker</a>
-    </li>
-      <li class="nav-item">
-      <a class="nav-link" href="#">Health Tracker</a>
-    </li>
-    </ul>
-      <ul class="navbar-nav ml-auto">
-          <div class="row">
-              <div class="col-lg-3">
-                  <div class="profile-pic">
-                      <a class="highlight-pic" href="/profile">
-                          <img class="rounded-circle img-thumbnail" src="https://i.imgur.com/BK7wL0d.jpg" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Log in/<br> Sign Up</a>
-          </li>
-      </ul>
-  </nav>
-
+     {% extends 'layout.html' %}
+     {% block body %}
       <header>
       <div id="carouselExampleIndicators" class="carousel slide" >
         <ol class="carousel-indicators">
@@ -110,9 +65,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
-    <!-- jQuery first, then Bootstrap JS. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+     {% endblock %}
   </body>
 </html>
