--- a/static/HealthTracker.css
+++ b/static/HealthTracker.css
@@ -1,15 +1,15 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-family: Verdana;
 }
 
 #healthtracker {
-    position: relative;
+    position: static;
     float: left;
     padding: 20px;
-    font-family: Arial;
-    margin: 100px;
-    margin-top: 30px;
+    margin-left: 50px;
+    margin-top: 50px;
     line-height: 0.7;
 }
 
@@ -23,19 +23,36 @@
 
 #measure {
     position: absolute;
-    left: 800px;
-    top: 650px;
+    left: 500px;
+    top: 800px;
+    width: 100%;
+}
+
+.btn btn-warning{
     cursor: pointer;
 }
 
+#measure_stats {
+    margin-right: 300px;
+}
+
+textarea {
+    width: 200px;
+    height: 50px;
+    padding: 10px;
+    font-size: 50%;
+    position: absolute;
+    left: 500px;
+}
+
 img {
-    position: relative;
+    position: static;
     text-align: center;
 }
 
 #instructions {
     position: relative;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 #heading {
@@ -55,12 +72,16 @@ button {
     width: 100px;
 }
 
+ol {
+    list-style-position: inside;
+}
+
 #chartContainer {
-    margin-top: 100px;
+    margin-top: 130px;
     height: 500px;
-    width: 700px;
+    width: 650px;
+    left: 500px;
     position: absolute;
-    right: 100px;
 }
 
 #here {
@@ -69,7 +90,7 @@ button {
 }
 
 #footer {
-    position: relative;
+    position: static;
 }
 
 .profile-pic
