--- a/templates/HealthTracker.html
+++ b/templates/HealthTracker.html
@@ -1,67 +1,48 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8">
     <title>Health Tracker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/HealthTracker.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='HealthTracker.css') }}">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='HealthTracker.js') }}"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-    <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/home">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Schedule</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Exercise Guide</a>
-    </li>
-      <li class="nav-item">
-      <a class="nav-link" href="#">Fitness Tracker</a>
-    </li>
-      <li class="nav-item">
-      <a class="nav-link" href="/healthtracker">Health Tracker</a>
-    </li>
-    </ul>
-      <ul class="navbar-nav ml-auto">
-          <div class="row">
-              <div class="col-lg-3">
-                  <div class="profile-pic">
-                      <a class="highlight-pic" href="/profile">
-                          <img class="rounded-circle img-thumbnail" src="https://i.imgur.com/BK7wL0d.jpg" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Log in/<br> Sign Up</a>
-          </li>
-      </ul>
-  </nav>
+{% include 'navbar.html' %}
 <div id="healthtracker">
-    <div class="alert alert-info">
-        <strong>Update!</strong> Your new heart rate is <strong>116</strong> beats per minute.
+    <div class="alert alert-info" id="update">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>Update!</strong> Your new heart rate is <strong><span id="record">116</span></strong> beats per minute.
     </div>
     <h1>Username</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_FF1iiKKqXcGja2DO9tplEIoq1Es4x20SIEGJXld2XWrB9zDz" alt=username">
     <div id="userstats">
     <p>Age : 16</p><br>
     <p>Date of Birth: 25/12/2001</p><br>
-    <p>Previous Heart Rate: 116 beats per minute</p><br>
+    <p>Previous Heart Rate: <strong><span id="record2">116</span></strong> beats per minute</p><br>
     <p>Previously Recorded on: 18/11/2018</p><br>
     <p>Condition: <span id="condition">Good</span></p><br>
     <p>Recommended Activities: Exercising</p><br>
     <p style="font-weight: bold;">(Note: Subject to change)</p><br>
     </div>
+    <div id="measure">
+    <div id="measure_stats">
+    <h3>No. of heart beats in 15 seconds:<textarea placeholder="E.g.(30, 40)" id="bpm"></textarea></h3>
+    </div>
+    <button type="button" class="btn btn-warning" onclick="Multiply()">MEASURE</button>
+</div>
     <div id="instructions">
-        <h1 id="heading">Want to measure your heart rate? Click <span id="here">here</span> to see how!</h1>
-        <div id="info">
+        <h1 id="heading">Want to measure your heart rate? Click <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#info">here</button> to see how!</h1>
+        <div id="info" class="collapse">
             <h2>Learn what is a normal heart rate and how to find your pulse with your fingers or a device</h2>
             <p>Measuring your heart rate is any easy way to gauge your health, as it provides a real-time snapshot of your heart muscle function.</p>
             <p>A normal heart rate can vary from person to person. However, an unusually high or low resting heart rate can be a sign of trouble.</p>
@@ -70,11 +51,11 @@
             <p>Among healthy people, a slower heart rate can be due to being physically fit, a medication, or sleep patterns. However, a slower heart rate can indicate a sign of disease including heart attack or other heart disease, certain infections, high levels of potassium in the blood, or an an underactive thyroid.<p>
             <p>On the reverse side, a fast rate in healthy people can be because they are exercising, nervous or excited, using a stimulant or are pregnant. The diseasehealth conditions that are associated with a fast heart rate include most infections or just about any cause of fever, heart problems, certain medications, low levels of potassium in the blood, an overactive thyroid gland or too much thyroid medication, anemia, or asthma or other breathing trouble.</p>
             <h2>How to check your heart rate?</h2>
-            <ul>
+            <ol>
                 <li>At the wrist, lightly press the index and middle fingers of one hand on the opposite wrist, just below the base of the thumb.</li>
                 <li>At the neck, lightly press the side of the neck, just below your jawbone.</li>
                 <li>Count the number of beats in 15 seconds, and multiply by four. That's your heart rate.</li>
-            </ul>
+            </ol>
         </div>
     </div>
 </div>
@@ -82,64 +63,61 @@
 <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </div>
-<div id="measure">
-<button type="button" class="btn btn-warning">MEASURE</button>
-</div>
 </body>
 <script>
 window.onload = function () {
 
-var options = {
-	animationEnabled: true,
-	theme: "light2",
-	title:{
-		text: "Health Tracker"
-	},
-	axisX:{
-		valueFormatString: "DD MMM"
-	},
-	axisY: {
-		title: "Heart Rates (Beats per Minute)",
-		minimum: 50
-	},
-	toolTip:{
-		shared:true
-	},
-	legend:{
-		cursor:"pointer",
-		verticalAlign: "bottom",
-		horizontalAlign: "left",
-		dockInsidePlotArea: true,
-		itemclick: toogleDataSeries
-	},
-	data: [{
-		type: "line",
-		cursor: "pointer",
-		showInLegend: true,
-		name: "Heart Rate",
-		markerType: "square",
-		xValueFormatString: "DD MMM, YYYY",
-		color: "#F08080",
-		yValueFormatString: "#,##0BPM",
-		dataPoints: [
-			{ x: new Date(2018, 10, 14), y: 123 },
-			{ x: new Date(2018, 10, 15), y: 89 },
-			{ x: new Date(2018, 10, 16), y: 145 },
-			{ x: new Date(2018, 10, 17), y: 150 },
-			{ x: new Date(2018, 10, 18), y: 116 },
-		]
-	}]
-};
-$("#chartContainer").CanvasJSChart(options);
+    var options = {
+        animationEnabled: true,
+        theme: "light2",
+        title: {
+            text: "Health Tracker"
+        },
+        axisX: {
+            valueFormatString: "DD MMM"
+        },
+        axisY: {
+            title: "Heart Rates (Beats per Minute)",
+            minimum: 50
+        },
+        toolTip: {
+            shared: true
+        },
+        legend: {
+            cursor: "pointer",
+            verticalAlign: "bottom",
+            horizontalAlign: "left",
+            dockInsidePlotArea: true,
+            itemclick: toogleDataSeries
+        },
+        data: [{
+            type: "line",
+            cursor: "pointer",
+            showInLegend: true,
+            name: "Heart Rate",
+            markerType: "square",
+            xValueFormatString: "DD MMM YYYY",
+            color: "#F08080",
+            yValueFormatString: "#,##0BPM",
+            dataPoints: [
+                {x: new Date(2018, 10, 14), y: 124},
+                {x: new Date(2018, 10, 15), y: 88},
+                {x: new Date(2018, 10, 16), y: 140},
+                {x: new Date(2018, 10, 17), y: 148},
+                {x: new Date(2018, 10, 18), y: 116},
+            ]
+        }]
+    };
+    $("#chartContainer").CanvasJSChart(options);
 
-function toogleDataSeries(e){
-	if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-		e.dataSeries.visible = false;
-	} else{
-		e.dataSeries.visible = true;
-	}
-	e.chart.render();
-}
+    function toogleDataSeries(e) {
+        if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+            e.dataSeries.visible = false;
+        } else {
+            e.dataSeries.visible = true;
+        }
+        e.chart.render();
+    }
 
 }
 </script>
