Revert "Schedule html and css update 1.2"

--- a/static/health_fitness_plan.css
+++ b/static/health_fitness_plan.css
@@ -34,9 +34,17 @@ table{
     background-color: white;
 }
 
-td > span{
+td > a:hover{
+    text-decoration: none;
+}
+
+td > a{
     color: black;
     font-weight: bold;
+}
+
+form{
+    border: 2px solid lightskyblue;
 }
 
 #poly{
