updated with fitness part

--- a/templates/fitness.html
+++ b/templates/fitness.html
@@ -991,7 +991,7 @@
 
 <body>
 
-{% include 'includes/navbar.html' %}
+{% include 'includes/_navbar.html' %}
 
 <div class="main__ x  x-fonts-lato">
     <div
