Links in Navbar updated

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -19,16 +19,16 @@
         {% if session.logged_in %}
     </li>
         <li class="nav-item">
-      <a class="nav-link" href="#">Exercise Guide</a>
+      <a class="nav-link" href="/ExGuide">Exercise Guide</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Schedule</a>
+      <a class="nav-link" href="/schedule">Schedule</a>
     </li>
       <li class="nav-item">
-      <a class="nav-link" href="#">Fitness Tracker</a>
+      <a class="nav-link" href="fitness">Fitness Tracker</a>
     </li>
       <li class="nav-item">
-      <a class="nav-link" href="#">Health Tracker</a>
+      <a class="nav-link" href="/HealthTracker">Health Tracker</a>
     </li>
         {% endif %}
     </ul>
