--- a/templates/HealthTracker.html
+++ b/templates/HealthTracker.html
@@ -18,18 +18,17 @@
 </head>
 <body>
 {% include 'navbar.html' %}
-<div id="healthtracker">
+    <div id="healthtracker">
     <div class="alert alert-info" id="update">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-        <strong>Update!</strong> Your new heart rate is <strong><span id="record">116</span></strong> beats per minute.
+        <strong>Update!</strong> Your new heart rate as of <strong><span id="date"></span></strong> is <strong><span id="record"></span></strong> beats per minute.
     </div>
     <h1>Username</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_FF1iiKKqXcGja2DO9tplEIoq1Es4x20SIEGJXld2XWrB9zDz" alt=username">
     <div id="userstats">
     <p>Age : 16</p><br>
     <p>Date of Birth: 25/12/2001</p><br>
-    <p>Previous Heart Rate: <strong><span id="record2">116</span></strong> beats per minute</p><br>
-    <p>Previously Recorded on: 18/11/2018</p><br>
+    <p>Previous Heart Rate: <strong><span id="record2">/span></strong> beats per minute</p><br>
+        <p>Previously Recorded on: <strong><span id="date2"></span></strong></p><br>
     <p>Condition: <span id="condition">Good</span></p><br>
     <p>Recommended Activities: Exercising</p><br>
     <p style="font-weight: bold;">(Note: Subject to change)</p><br>
@@ -38,7 +37,7 @@
     <div id="measure_stats">
     <h3>No. of heart beats in 15 seconds:<textarea placeholder="E.g.(30, 40)" id="bpm"></textarea></h3>
     </div>
-    <button type="button" class="btn btn-warning" onclick="Multiply()">MEASURE</button>
+    <button type="button" class="btn btn-warning" id="myBtn" onclick="Multiply()">MEASURE</button>
 </div>
     <div id="instructions">
         <h1 id="heading">Want to measure your heart rate? Click <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#info">here</button> to see how!</h1>
@@ -64,63 +63,6 @@
 <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </div>
 </body>
-<script>
-window.onload = function () {
-
-    var options = {
-        animationEnabled: true,
-        theme: "light2",
-        title: {
-            text: "Health Tracker"
-        },
-        axisX: {
-            valueFormatString: "DD MMM"
-        },
-        axisY: {
-            title: "Heart Rates (Beats per Minute)",
-            minimum: 50
-        },
-        toolTip: {
-            shared: true
-        },
-        legend: {
-            cursor: "pointer",
-            verticalAlign: "bottom",
-            horizontalAlign: "left",
-            dockInsidePlotArea: true,
-            itemclick: toogleDataSeries
-        },
-        data: [{
-            type: "line",
-            cursor: "pointer",
-            showInLegend: true,
-            name: "Heart Rate",
-            markerType: "square",
-            xValueFormatString: "DD MMM YYYY",
-            color: "#F08080",
-            yValueFormatString: "#,##0BPM",
-            dataPoints: [
-                {x: new Date(2018, 10, 14), y: 124},
-                {x: new Date(2018, 10, 15), y: 88},
-                {x: new Date(2018, 10, 16), y: 140},
-                {x: new Date(2018, 10, 17), y: 148},
-                {x: new Date(2018, 10, 18), y: 116},
-            ]
-        }]
-    };
-    $("#chartContainer").CanvasJSChart(options);
-
-    function toogleDataSeries(e) {
-        if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-            e.dataSeries.visible = false;
-        } else {
-            e.dataSeries.visible = true;
-        }
-        e.chart.render();
-    }
-
-}
-</script>
 </html>
 
 			<!--{ x: new Date(2017, 10, 6), y: 55 },
