--- a/templates/register.html
+++ b/templates/register.html
@@ -26,6 +26,12 @@
      <div class="form-group">
          {{render_field(form.height, class_="form-control")}}
      </div>
+    <div class="form-group">
+         {{render_field(form.gender)}}
+     </div>
+    <div class="form-group">
+         {{render_field(form.age, class_="form-control")}}
+     </div>
      <p><input type="submit" class="btn btn-primary" value="Submit"></p>
  </form>
 </div>
