Update html/css/javascript 1.4 (final)

--- a/templates/HealthTracker.html
+++ b/templates/HealthTracker.html
@@ -27,15 +27,15 @@
     <div id="userstats">
     <p>Age : 16</p><br>
     <p>Date of Birth: 25/12/2001</p><br>
-    <p>Previous Heart Rate: <strong><span id="record2">/span></strong> beats per minute</p><br>
+    <p>Previous Heart Rate: <strong><span id="record2"></span></strong> beats per minute</p><br>
         <p>Previously Recorded on: <strong><span id="date2"></span></strong></p><br>
-    <p>Condition: <span id="condition">Good</span></p><br>
+    <p>Condition: <span id="condition"></span></p><br>
     <p>Recommended Activities: Exercising</p><br>
     <p style="font-weight: bold;">(Note: Subject to change)</p><br>
     </div>
     <div id="measure">
     <div id="measure_stats">
-    <h3>No. of heart beats in 15 seconds:<textarea placeholder="E.g.(30, 40)" id="bpm"></textarea></h3>
+    <h3>No. of heart beats in 10 seconds:<textarea placeholder="E.g.(20, 30)" id="bpm"></textarea></h3>
     </div>
     <button type="button" class="btn btn-warning" id="myBtn" onclick="Multiply()">MEASURE</button>
 </div>
@@ -48,13 +48,14 @@
             <h2>What is a normal heart rate?</h2>
             <p>A normal heart rate for adults is typically 60 to 100 beats per minute. A heart rate that is slower than 60 beats per minute is considered bradycardia ("slow heart") and a rate that is faster than 100 beats per minutes is termed tachycardia ("fast heart"). There are some experts who believe that an ideal resting heart rate is closer to 50 to 70 beats per minute. Regardless of what is considered normal, it's important to recognize that a healthy heart rate will vary depending on the situation.</p>
             <p>Among healthy people, a slower heart rate can be due to being physically fit, a medication, or sleep patterns. However, a slower heart rate can indicate a sign of disease including heart attack or other heart disease, certain infections, high levels of potassium in the blood, or an an underactive thyroid.<p>
-            <p>On the reverse side, a fast rate in healthy people can be because they are exercising, nervous or excited, using a stimulant or are pregnant. The diseasehealth conditions that are associated with a fast heart rate include most infections or just about any cause of fever, heart problems, certain medications, low levels of potassium in the blood, an overactive thyroid gland or too much thyroid medication, anemia, or asthma or other breathing trouble.</p>
+            <p>On the reverse side, a fast rate in healthy people can be because they are exercising, nervous or excited, using a stimulant or are pregnant. The disease health conditions that are associated with a fast heart rate include most infections or just about any cause of fever, heart problems, certain medications, low levels of potassium in the blood, an overactive thyroid gland or too much thyroid medication, anemia, or asthma or other breathing trouble.</p>
             <h2>How to check your heart rate?</h2>
-            <ol>
-                <li>At the wrist, lightly press the index and middle fingers of one hand on the opposite wrist, just below the base of the thumb.</li>
+            <ul>
+                <img src="https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/2018/1-whatshouldmy.jpg" style="float: right; width: 200px; height: 100px;">
                 <li>At the neck, lightly press the side of the neck, just below your jawbone.</li>
-                <li>Count the number of beats in 15 seconds, and multiply by four. That's your heart rate.</li>
-            </ol>
+                <li>Alternatively, at the wrist, lightly press the index and middle fingers of one hand on the opposite wrist, just below the base of the thumb.</li>
+                <li>Count the number of beats in 10 seconds, and multiply by six. That's your heart rate.</li>
+            </ul>
         </div>
     </div>
 </div>
