--- a/static/fitness_bootstrap.css
+++ b/static/fitness_bootstrap.css
@@ -6,6 +6,69 @@
  */
 /*auto CSS bootstrap theme*/
 
+#ex2 {
+ width: 730px;
+ height: 133px;
+ line-height: 0px;
+ color: transparent;
+ font-size: 50px;
+ font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
+ text-transform: uppercase;
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+}
+
+#ex2:hover {
+ line-height: 133px;
+ color: #575858;
+}
+
+#ex2 img{
+ float: left;
+ margin: 0 15px;
+}
+
+.img-circle {
+    border-radius: 50%;
+    width: 240px;
+    height: 240px;
+}
+
+#ex3 {
+ line-height: 0px;
+ color: transparent;
+ font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+ -webkit-transition: all 0.5s ease;
+ -moz-transition: all 0.5s ease;
+ -o-transition: all 0.5s ease;
+}
+
+#ex3:hover {
+ line-height: 25px;
+ color: #575858;
+}
+
+#ex3 img{
+}
+
+.center {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+div.c {
+    position: absolute;
+    left: 275px;
+    width: 200px;
+    height: 120px;
+}
+
 .circle {
   width: 300px;
   height: 300px;
