--- a/templates/fitness.html
+++ b/templates/fitness.html
@@ -44,9 +44,21 @@
     }
 </style>
 
+<script>
+function record() {
+    let i;
+    let foodlist = [];
+    let gramls = [];
+    for(i=0; i < 1; i++) {
+        foodlist.push(prompt("Enter food:"));
+        gramls.push(prompt("Enter amount of " + foodlist[i] + " in gram:"));
+        document.getElementById('listadd').innerHTML += "<li>" + "Food:" + foodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
+}}
+</script>
+
 <div>
 
-{% include 'includes/_navbar.html' %}
+    {% include 'includes/navbar.html' %}
 
 </div>
 
@@ -57,67 +69,87 @@
 <div id="toppartoffit">
     <div id="wrapper">
         <div class="marginTB__ ">
-            <div class= "circle hover text-center">
-                    <h1>
-                        2500</h1>
-                    <span class="font-weight-bold">KCAL LEFT</span>
+            <div class="circle hover text-center">
+                <h1>
+                    {{ kcal.get_maintenance() }}</h1>
+                <span class="font-weight-bold">KCAL LEFT</span>
             </div>
         </div>
     </div>
 
-<div class="marginTB__"></div>
+    <div class="marginTB__"></div>
 </div>
 
-<div class="bg-light text-center">
+<div class="bg-light text-center" style="position: static;">
     {#section heading#}
-        <h2 class="marginTB__">
-            <span>Nutritional Consumption</span>
-        </h2>
-        {#contentCardHeading#}
+    <h2 class="marginTB__" style="font-family: Verdana;">
+        <span>Nutritional Consumption</span>
+    </h2>
+    {#contentCardHeading#}
 
-        <h4>
-            250 g left | Carbs</h4>
+    <div>
+        {#    Carbohydrates#}
+        <div style="display:inline-block;" class="marginLR__">
+            <h4 class="marginTB__">
+                250 g left | Carbs</h4>
 
-        <!--Content card image-->
-        <div>
-            <img src="//img1.wsimg.com/isteam/ip/6f953e8e-3d8b-4559-908e-a0d20d9ad096/5b5a8b94-b66d-4362-8dbc-4872277fb85b.jpg/:/cr=t:0%25,l:18.43%25,w:66.25%25,h:100%25/rs=w:223,h:223,cg:true">
-        </div>
-        <div>
-                <span class="font-weight-bold">Carbohydrates</span>
-                have six major functions within the body: Providing energy and
-                regulation of blood glucose. Sparing the use of proteins for
-                energy.</p>
-        </div>
-        <h4 class="marginTB__"> 206g left | Proteins</h4>
+            <!--Content card image-->
+            <div id="ex3">
+                <img class="img-circle hover"
+                     src="//img1.wsimg.com/isteam/ip/6f953e8e-3d8b-4559-908e-a0d20d9ad096/5b5a8b94-b66d-4362-8dbc-4872277fb85b.jpg/:/cr=t:0%25,l:18.43%25,w:66.25%25,h:100%25/rs=w:223,h:223,cg:true">
 
-        <!--Content card image-->
-        <div>
-            <img src="//img1.wsimg.com/isteam/ip/6f953e8e-3d8b-4559-908e-a0d20d9ad096/92c5ee9e-094b-4813-9183-448eef2f164a.jpg/:/cr=t:2.32%25,l:0%25,w:100%25,h:66.72%25/rs=w:223,h:223,cg:true">
-        </div>
-        <div>
-                <span class="font-weight-bold">Protein</span>
-                is essential for the maintenance and building of body tissues
-                and muscle. Prevent protein deficiency issues.</p>
-        </div>
-        <h4 class="marginTB__">
-            75g left | Fats</h4>
+                <div id="wrapper" class="marginTB__">
+                    <span class="font-weight-bold">Carbohydrates</span>
+                    have six major functions within the body: Providing energy and
+                    regulation of blood glucose. Prevent ketosis.
 
-        {#Content card image#}
-        <div>
-            <img src="//img1.wsimg.com/isteam/ip/6f953e8e-3d8b-4559-908e-a0d20d9ad096/0139ec1b-30a4-4f98-9732-7fe4b03c19af.jpg/:/cr=t:33.32%25,l:0%25,w:100%25,h:66.68%25/rs=w:223,h:223,cg:true">
-        </div>
-        <div>
-                <span class="font-weight-bold">Fats </span>acts
-                as a backup source of energy, absorption for fat-soluble
-                vitamins, insulation to temperature, increasing testoterone.</p>
 
-            <div class="marginTB__"></div>
+                    <div class="marginTB__"></div>
+
+                </div>
+            </div>
         </div>
+
+        {#    Proteins#}
+        <div style="display:inline-block; vertical-align: top;" class="marginLR__">
+            <h4 class="marginTB__"> 206g left | Proteins</h4>
+            <!--Content card image-->
+            <div id="ex3">
+                <img class="img-circle hover"
+                     src="//img1.wsimg.com/isteam/ip/6f953e8e-3d8b-4559-908e-a0d20d9ad096/92c5ee9e-094b-4813-9183-448eef2f164a.jpg/:/cr=t:2.32%25,l:0%25,w:100%25,h:66.72%25/rs=w:223,h:223,cg:true">
+                <div id="wrapper" class="marginTB__">
+                    <span class="font-weight-bold">Protein</span>
+                    is essential for the maintenance and building of body tissues
+                    and muscle. Prevent protein deficiency issues.
+
+                    <div class="marginTB__"></div>
+                </div>
+            </div>
+        </div>
+
+        <div style="display:inline-block; vertical-align: top;" class="marginLR__">
+            <h4 class="marginTB__">
+                75g left | Fats</h4>
+
+            {#Content card image#}
+            <div id="ex3">
+                <img class="img-circle hover"
+                     src="//img1.wsimg.com/isteam/ip/6f953e8e-3d8b-4559-908e-a0d20d9ad096/0139ec1b-30a4-4f98-9732-7fe4b03c19af.jpg/:/cr=t:33.32%25,l:0%25,w:100%25,h:66.68%25/rs=w:223,h:223,cg:true">
+                <div id="wrapper" class="marginTB__">
+                    <span class="font-weight-bold">Fats </span>acts
+                    as a backup source of energy, absorption for fat-soluble
+                    vitamins, insulation to temperature, increasing testoterone.
+
+                    <div class="marginTB__"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="bg-white">
-<!--Heading for meal section-->
-    <div style="margin-left: 20rem">
+<div>
+    <!--Heading for meal section-->
+    <div class="c">
         <h2 class="marginTB__">
             <span class="font-weight-bold" style="color: limegreen">Meals</span>
         </h2>
@@ -126,13 +158,12 @@
             <h4>Breakfast</h4>
             <div>
                 <p style="margin:0"></p>
-                <ul>
-                    <li>List</li>
+                <ul id="listadd">
                 </ul>
                 <p></p></div>
             <!--Buttons to add meal and exercises-->
             <button type="button"
-                    class="btn btn-success">
+                    class="btn btn-success" onclick="record()">
                 Add your meal
 
             </button>
@@ -147,7 +178,8 @@
                 </ul>
                 <p></p></div>
             <button type="button"
-                    class="btn btn-success">
+                    class="btn btn-success"
+            onclick="record()">
                 Add your meal
             </button>
         </div>
@@ -161,7 +193,8 @@
                 </ul>
                 <p></p></div>
             <button type="button"
-                    class="btn btn-success">
+                    class="btn btn-success"
+            onclick="record()">
                 Add your meal
             </button>
         </div>
@@ -175,7 +208,8 @@
                 </ul>
                 <p></p></div>
             <button type="button"
-                    class="btn btn-success">
+                    class="btn btn-success"
+            onclick="record()">
                 Add your meal
             </button>
         </div>
@@ -189,7 +223,8 @@
                 </ul>
                 <p></p></div>
             <button type="button"
-                    class="btn btn-danger">
+                    class="btn btn-danger"
+            onclick="record()">
                 Add your exercise
             </button>
         </div>
